# QuickKart-Support-Ops-simulation-

./: .gitignore  Dockerfile  README.md  baseline.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  support_env.py
scripts/: validate_submission.py
server/: app.py
server/static/: app.js  app.jsx  index.html  signin.css  signin.jsx  styles.css
tests/: test_api.py  test_env.py
